2011-03-11  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/network/JoinThread.h: Pass pack_size to JoinThread.
	* src/network/ThreadFactory.cpp: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* include/network/ThreadFactory.h: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.

	* include/dmcs/StreamingBackwardMessage.h: Combine belief_states and session_id into ModelSessionId.
	* src/network/OutputThread.cpp: Likewise.
	* src/dmcsc.cpp: Likewise.
	* include/network/OutputThread.h: Likewise.
	* include/network/NeighborThread.h: Likewise.
	* include/network/AsynClient.tcc: Likewise.

	* include/dmcs/ModelSessionId.h: New file.
	* include/dmcs/Makefile.am: Add ModelSessionId.h.

	* include/network/Makefile.am: Remove RouterThread.
	* src/network/ThreadFactory.cpp: Likewise.

	* include/dmcs/CommandTypeFactory.h: Continue cleaning conflicts
	related stuff.
	* src/solver/RelSatSolver.cpp: Likewise.
	* src/network/ThreadFactory.cpp: Likewise.
	* src/network/OutputThread.cpp: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* include/solver/SatSolverFactory.h: Likewise.
	* include/solver/RelSatSolver.h: Likewise.
	* include/network/ThreadFactory.h: Likewise.
	* include/network/Handler.tcc: Likewise.
	* include/dmcs/StreamingDMCS.h: Likewise.
	* src/dmcsc.cpp: Likewise.

2011-03-10  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/dmcs/ConflictNotification.h: On cleaning conflicts
	related stuff.
	* include/dmcs/OutputNotification.h: Likewise.
	* include/dmcs/StreamingDMCS.h: Likewise.
	* include/dmcs/StreamingForwardMessage.h: Likewise.
	* include/network/Handler.tcc: Likewise.
	* include/network/JoinThread.h: Likewise.
	* include/network/NeighborOut.h: Likewise.
	* include/solver/RelSatSolver.h: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* src/solver/RelSatSolver.cpp: Likewise.

	* src/network/ConcurrentMessageDispatcher.cpp: More debugging information.
